# agent_router

./: .gitignore  README.md  pyproject.toml
examples/: basic.py
src/agent_router/: __init__.py  agent.py
tests/: test_intent_router.py
